--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -53,6 +53,9 @@ Mod that adds functionality between Create Shops and NeoNetworkIRS.
 #[[mixins]]
 #config="${mod_id}.mixins.json"
 
+[[mixins]]
+config="nibanking.mixins.json"
+
 # The [[accessTransformers]] block allows you to declare where your AT file is.
 # If this block is omitted, a fallback attempt will be made to load an AT from META-INF/accesstransformer.cfg
 #[[accessTransformers]]
