--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,9 @@ mod_version=0.0.1
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=uk.co.tmdavies.nibanking
+
+## Dependencies
+registrate_version = MC1.21-1.3.0+67
+create_version = 1.21.1-6.0.9
+flywheel_version = 1.0.6
+ponder_version = 1.0.81
