--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
     // Add here additional repositories if required by some of the dependencies below.
     maven { url = "https://maven.createmod.net" } // Ponder, Flywheel
     maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
+    mavenLocal()
 }
 
 base {
@@ -141,7 +142,7 @@ dependencies {
         }
     })
 
-    implementation("com.tterrag.registrate:Registrate:${registrate_version}")
+    implementation(jarJar("com.tterrag.registrate:Registrate:${registrate_version}"))
 
     implementation "org.spongepowered:mixin:0.8.5"
 
